# juce-libtorch

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
